[gd_scene load_steps=13 format=3 uid="uid://m61kgxdhy7hc"]

[ext_resource type="Theme" uid="uid://cesgvqexxaqev" path="res://assets/windows_95_theme.tres" id="1_vmdvm"]
[ext_resource type="Script" uid="uid://ck1gmmsrevnw4" path="res://components/apps/broke_rage/stock_row.gd" id="2_2mfh4"]
[ext_resource type="Texture2D" uid="uid://bexdrhb3xo3ro" path="res://assets/ui/redarrow.png" id="3_wagdg"]
[ext_resource type="Texture2D" uid="uid://cpph6qmmgf2p3" path="res://assets/ui/greenbuttonpressed.png" id="4_2elvt"]
[ext_resource type="Texture2D" uid="uid://ctlorutr8vm1m" path="res://assets/ui/greenbutton.png" id="5_3jwjh"]
[ext_resource type="Texture2D" uid="uid://bt7khdre4vr0l" path="res://assets/ui/redbuttonpressed.png" id="6_2022p"]
[ext_resource type="Texture2D" uid="uid://dgbuedoo1sjgn" path="res://assets/ui/redbutton.png" id="7_rdy7d"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t6o0i"]
texture = ExtResource("4_2elvt")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1g05d"]
texture = ExtResource("4_2elvt")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cvu5h"]
texture = ExtResource("5_3jwjh")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8c4aw"]
texture = ExtResource("6_2022p")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lqo4w"]
texture = ExtResource("7_rdy7d")

[node name="StockRow" type="GridContainer"]
offset_right = 255.0
offset_bottom = 20.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme = ExtResource("1_vmdvm")
columns = 7
script = ExtResource("2_2mfh4")

[node name="StockLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = " $TSLA: $420"

[node name="SentimentArrow" type="TextureRect" parent="."]
layout_mode = 2
size_flags_horizontal = 6
texture = ExtResource("3_wagdg")
expand_mode = 3

[node name="Control2" type="Control" parent="."]
layout_mode = 2
mouse_filter = 1

[node name="BuyButton" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_stretch_ratio = 0.25
focus_mode = 0
mouse_filter = 1
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_t6o0i")
theme_override_styles/pressed = SubResource("StyleBoxTexture_1g05d")
theme_override_styles/normal = SubResource("StyleBoxTexture_cvu5h")
text = " BUY "

[node name="SellButton" type="Button" parent="."]
layout_mode = 2
size_flags_stretch_ratio = 0.25
focus_mode = 0
mouse_filter = 1
theme_override_styles/pressed = SubResource("StyleBoxTexture_8c4aw")
theme_override_styles/normal = SubResource("StyleBoxTexture_lqo4w")
text = " SELL "

[node name="Control" type="Control" parent="."]
layout_mode = 2
mouse_filter = 1

[node name="OwnedLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = " 0 : $0"
horizontal_alignment = 1

[connection signal="gui_input" from="StockLabel" to="." method="_on_stock_label_gui_input"]
